examples/test/testpolicy4599.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4599
  namespace: namespace196
spec:
  podSelector:
    matchLabels:
      key6: value17
      key15: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value41
          key17: value45
      podSelector:
        matchLabels:
          key15: value31
